--- a/client/blaze/reservationForm.html
+++ b/client/blaze/reservationForm.html
@@ -1,3 +1,3 @@
 <template name="ReservationForm">
-  {{> quickForm id="reservationsForm" schema=schema resetOnSuccess=true }}
+  {{> quickForm id="reservationsForm" schema=schema }}
 </template>
